oci-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhaiis-oci-deploy
  namespace: aireilly-rhaiis
  labels:
    app: granite
spec:
  replicas: 0
  selector:
    matchLabels:
      app: rhaiis-oci-deploy
  template:
    metadata:
      labels:
        app: rhaiis-oci-deploy
    spec:
      imagePullSecrets:
        - name: docker-secret
      volumes:
        - name: model-volume
          persistentVolumeClaim:
            claimName: model-cache
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: "2Gi"
        - name: oci-auth
          secret:
            secretName: docker-secret
            items:
              - key: .dockercfg
                path: config.json
      containers:
        - name: granite
          image: 'registry.redhat.io/rhaiis/vllm-cuda-rhel9@sha256:a6645a8e8d7928dce59542c362caf11eca94bb1b427390e78f0f8a87912041cd'
          imagePullPolicy: IfNotPresent
          command:
            - python
            - '-m'
            - vllm.entrypoints.openai.api_server
          args:
            - '--port=8000'
            - '--model=/model'
            - '--served-model-name=ibm-granite/granite-3.1-2b-instruct'
            - '--tensor-parallel-size=1'
          resources:
            limits:
              cpu: '10'
              nvidia.com/gpu: '1'
              memory: 16Gi
            requests:
              cpu: '2'
              memory: 6Gi
              nvidia.com/gpu: '1'
          volumeMounts:
            - name: model-volume
              mountPath: /model
            - name: shm
              mountPath: /dev/shm
      restartPolicy: Always
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhaiis-oci-deploy
  namespace: aireilly-rhaiis
spec:
  to:
    kind: Service
    name: rhaiis-oci-deploy
  port:
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: rhaiis-oci-deploy
  namespace: aireilly-rhaiis
spec:
  selector:
    app: rhaiis-oci-deploy
  ports:
    - name: http
      port: 80
      targetPort: 8000
